deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patrick-evers-deployment
  labels:
    app: patrick-evers
spec:
  selector:
    matchLabels:
      app: patrick-evers
  template:
    metadata:
      labels:
        app: patrick-evers
    spec:
      restartPolicy: Always
      containers:
        - name: patrick-evers
          image: ghcr.io/pmdevers/patrick-evers:sha-306a92a
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          ports:
            - containerPort: 80
