deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrick-evers
spec:
  selector:
    app: patrick-evers
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
