deploy/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: patrick-evers
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - www.patrick-evers.nl
    - patrick-evers.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: patrick-evers
          port: 8080
