deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patrick-evers
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.patrick-evers.nl
        - patrick-evers.nl
      secretName: patrick-evers-secret
  rules:
    - host: www.patrick-evers.nl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: patrick-evers
                port:
                  number: 8080
